182 ==> 334155 - digiKam crash on folder scan.
183 ==> 288380 - digiKam crashes, when removing and adding tags.
184 ==> 275157 - digiKam crashes while removing tags from images.
185 ==> 340696 - digiKam crash.
186 ==> 311904 - ShowFoto crash when creating thumbs.
187 ==> 335164 - Crash while updating image metadata to database in tools->maint. all cores.
188 ==> 151997 - Crash in exiv2 library.
189 ==> 142819 - Crash when opening any image.
190 ==> 135934 - Crash during camera access.
191 ==> 137697 - digiKam crash at startup while scanning files.
192 ==> 160528 - Crash after try to add gps coordinates.
193 ==> 112845 - digiKam crash on startup.
194 ==> 259057 - Crash when reading one particular image (possibly libexiv2 related).
195 ==> 150803 - digiKam crash signal 11.
196 ==> 141980 - digiKam crash when rescan certain files exiv2.
197 ==> 167913 - Segmentation fault upon start.
198 ==> 144439 - digiKam fails to load.
199 ==> 344704 - My application crashs when I include this library.
200 ==> 128104 - digiKam crash when browsing photos in Image Editor.
201 ==> 144098 - Aborted execution on startup.
202 ==> 146728 - Crash in loading and start digiKam.
203 ==> 220315 - Crash when starting with a usb album.
204 ==> 146948 - Crash when loading certain image.
205 ==> 376429 - Crash on rotate.
206 ==> 156418 - Crash when rotating or geolocalizing image.
207 ==> 366528 - Rating=4 automatically added to XMP sidecar when saving metadata.
208 ==> 174620 - After updating to current digiKam crashes.
209 ==> 110214 - digiKam hangs scanning items right after start.
210 ==> 177457 - digiKam crash when tagging files.
211 ==> 186837 - Libexiv2 crashes on certain JPGs.
212 ==> 144574 - digiKam crashes every time it scans collection.
213 ==> 178839 - digiKam crashes on exiv2 error.
214 ==> 166424 - Crash when editing Caption with digiKam.
215 ==> 436571 - Tooltips for images don't show tags containing "<" correctly.
216 ==> 